Resonite version 2025.5.9.23 (Awwdio)

--- a/standaloneFunnyString.csproj
+++ b/standaloneFunnyString.csproj
@@ -32,6 +32,9 @@
     <Reference Include="Elements.Core">
       <HintPath>$(ResonitePath)/Resonite_Data/Managed/Elements.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Awwdio">
+	<HintPath>$(ResonitePath)/Resonite_Data/Managed/Awwdio.dll</HintPath>
+    </Reference>
     <Reference Include="FrooxEngine.Store">
       <HintPath>$(ResonitePath)/Resonite_Data/Managed/FrooxEngine.Store.dll</HintPath>
     </Reference>
